# plungle

./: .gitignore  Cargo.toml  README.md  log_helper.py  plungle.py  validator.py
.github/workflows/: build.yml
docs/: radios.md
docs/radios/: ailunce_hd1.md  alinco_djmd5t.md  alinco_drmd500.md  anytone_x78.md  chirp_generic.md  opengd77_rt3s.md  tyt_mduv390.md
fixtures/ailunce_hd1/: basic.tw
fixtures/ailunce_hd1/basic/: Channels.csv  PriorityContacts.csv
fixtures/ailunce_hd1/export/: Channels.csv
fixtures/alinco_dj-500/: basic.fre
fixtures/alinco_dj-md5t/: basic.rdt
fixtures/alinco_dj-md5t/basic/: Aprs.CSV  AutoRepeaterOffsetFrequencies.CSV  Channel.CSV  RadioIDList.CSV  (+5 more)
fixtures/alinco_drmd500/: basic.rdt
fixtures/anytone_d878uv/: basic.rdt
fixtures/chirp_generic/: basic.csv
fixtures/motorola_xpr7550/: 2025-01-16 1113 Simple.ctb  2025-01-16 1113 Simple.ctb.xml  basic.ctb  basic.ctb.xml  explode-xml.sh  filter-sort-xml.sh
fixtures/opengd77_rt3s/: basic.g77
fixtures/qdmr_generic/: basic.yaml
fixtures/radioddity_db25d/: basic.F136
fixtures/tyt_mduv390/: basic.rdt
fixtures/yaesu_ft3d/: basic.csv  basic.ft3d
radios/: anytone_d878uv.py  radio_helper.py  retevis_rt3s_opengd77.py
src/: bandplan.rs  filter.rs  frequency.rs  helpers.rs  main.rs  merge.rs  power.rs  printer.rs  structures.rs  validate.rs
src/radios/: ailunce_hd1.rs  alinco_djmd5t.rs  alinco_drmd500.rs  anytone_x78.rs  chirp_generic.rs  mod.rs  motorola_xpr7550.rs  opengd77_rt3s.rs  qdmr_generic.rs  tyt_mduv390.rs  yaesu_ft3d.rs
tests/: compare.sh  dump.sh  frequency.rs
(+44 files in other folders)
