[package]
name = "plungle"
version = "0.1.0"
edition = "2021"

[dependencies]
clap = { version = "4.0", features = ["derive"] }
serde = { version = "1.0.217", features = ["derive"] }
csv = "1.1.2"
serde_json = "1.0.134"
rust_decimal = "1.36"
rust_decimal_macros = "1.36"
toml = "0.8.19"
termcolor = "1.4.1"
saphyr = "0.0.3"
